Bug 496684. Finish reading headers in liboggplay before reporting that headers are read, but make sure to not skip any frames while doing so. r=wiking(ish)

--HG--
extra : rebase_source : 0413f7c85460c11a6bf00492aec1fb9510ce8b16