media/liboggplay/src/liboggplay/oggplay_callback.c
@@ -237,6 +237,7 @@ oggplay_callback_cmml (OGGZ * oggz, ogg_packet * op, long serialno,
     }
 
     common->current_loc = granulepos * common->granuleperiod;
+    common->last_granulepos = granulepos;
 
     oggplay_data_handle_cmml_data (&(decoder->decoder), op->packet, op->bytes);
   }
@@ -388,7 +389,7 @@ oggplay_callback_audio (OGGZ * oggz, ogg_packet * op, long serialno,
 
   fish_sound_prepare_truncation (decoder->sound_handle, op->granulepos,
                                                                 op->e_o_s);
-  if (fish_sound_decode (decoder->sound_handle, op->packet, op->bytes) != 0) {
+  if (fish_sound_decode (decoder->sound_handle, op->packet, op->bytes) == -1) {
     // Unrecoverable error, disable track
     op->e_o_s = 1;
     common->active = 0;
@@ -490,6 +491,7 @@ oggplay_callback_kate (OGGZ * oggz, ogg_packet * op, long serialno,
     base = (granulepos >> granuleshift);
     offset = granulepos - (base << granuleshift);
     common->current_loc = (base+offset) * common->granuleperiod;
+    common->last_granulepos = granulepos;
   } else {
     common->current_loc = -1;
   }
@@ -574,7 +576,7 @@ oggplay_initialise_decoder(OggPlay *me, int content_type, int serialno) {
    * set to -1 until headers decoded
    */
   decoder->current_loc = -1;
-  decoder->last_granulepos = 0;
+  decoder->last_granulepos = -1;
 
   /*
    * the offset is how far advanced or delayed this track is to the "standard"
@@ -642,9 +644,7 @@ oggplay_callback_predetected (OGGZ *oggz, ogg_packet *op, long serialno,
    */
   for (i = 0; i < me->num_tracks; i++) {
     if (serialno == me->decode_data[i]->serialno) {
-
-      me->all_tracks_initialised = 1;
-
+      
       /*
        * call appropriate callback
        */
@@ -653,20 +653,29 @@ oggplay_callback_predetected (OGGZ *oggz, ogg_packet *op, long serialno,
                                           me->decode_data[i]);
       }
 
-      /*
-       * set up all the other callbacks
-       */
-      for (i = 0; i < me->num_tracks; i++) {
-        serialno = me->decode_data[i]->serialno;
-        content_type = oggz_stream_get_content (me->oggz, serialno);
-        oggz_set_read_callback(me->oggz, serialno,
-                        callbacks[content_type].callback, me->decode_data[i]);
-      }
+      if 
+      (
+        (op->granulepos >= 0) 
+        ||
+        (op->granulepos == -1 && me->decode_data[i]->last_granulepos != -1)
+      )
+      {
+        /*
+         * set up all the other callbacks
+         */
+        for (i = 0; i < me->num_tracks; i++) {
+          serialno = me->decode_data[i]->serialno;
+          content_type = oggz_stream_get_content (me->oggz, serialno);
+          oggz_set_read_callback(me->oggz, serialno,
+                          callbacks[content_type].callback, me->decode_data[i]);
+        }
 
-      /*
-       * destroy this callback
-       */
-      oggz_set_read_callback (me->oggz, -1, NULL, NULL);
+        /*
+         * destroy this callback
+         */
+        oggz_set_read_callback (me->oggz, -1, NULL, NULL);
+        me->all_tracks_initialised = 1;
+      }
 
       return 0;
     }
